feat: Integrate PDF.js and EPUB.js for ebook rendering
Adds dependencies and initial setup for rendering PDF and EPUB files. Includes CSS styles for PDF text layers and highlight functionality. Updates types to support EPUB CFI and PDF page/rectangle data for highlights and bookmarks. Modifies database schema to accommodate new book attributes and location tracking.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/epub.js/0.3.93/epub.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
+      // Configure PDF.js Worker
+      if (window.pdfjsLib) {
+        window.pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+      }
+      
       tailwind.config = {
         darkMode: 'class',
         theme: {
@@ -92,6 +100,44 @@
       ::selection {
         background: rgba(0, 102, 255, 0.3);
         color: white;
+      }
+
+      /* PDF.js Text Layer */
+      .textLayer {
+        position: absolute;
+        text-align: initial;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        overflow: hidden;
+        opacity: 0.2;
+        line-height: 1.0;
+        pointer-events: all;
+      }
+
+      .textLayer > span {
+        color: transparent;
+        position: absolute;
+        white-space: pre;
+        cursor: text;
+        transform-origin: 0% 0%;
+      }
+
+      /* Highlight Colors */
+      .highlight-yellow { background-color: rgba(250, 204, 21, 0.3); }
+      .highlight-green { background-color: rgba(74, 222, 128, 0.3); }
+      .highlight-blue { background-color: rgba(96, 165, 250, 0.3); }
+      .highlight-purple { background-color: rgba(192, 132, 252, 0.3); }
+      .highlight-red { background-color: rgba(248, 113, 113, 0.3); }
+      
+      .highlight-item {
+        border-radius: 2px;
+        cursor: pointer;
+        transition: background-color 0.2s;
+      }
+      .highlight-item:hover {
+        filter: brightness(1.1);
       }
     </style>
   <script type="importmap">
